--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,17 @@
                     to Global</a>
             </div>
 
+            {% if user.is_authenticated %}
+
+            <!-- Desktop Auth Button -->
+            <div class="hidden md:flex items-center">
+                <a href="{% url 'accounts:profile'%}"
+                    class="flex items-center space-x-2 px-4 py-2 gradient-btn text-white rounded-full shadow-lg hover:shadow-xl transition-colors ease-in-out duration-300">
+                    <i class="fas fa-user text-sm"></i>
+                    <span>Profile</span>
+                </a>
+            </div>
+            {% else %}
             <!-- Desktop Auth Button -->
             <div class="hidden md:flex items-center">
                 <a href="{% url 'accounts:login'%}"
@@ -36,6 +47,7 @@
                     <span>Login</span>
                 </a>
             </div>
+            {% endif %}
 
             <!-- Mobile Menu Button -->
             <button id="mobile-menu-btn"
